clusters/vollminlab-cluster/portainer/portainer/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  labels:
    app: portainer
    env: production
    category: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    shlink.vollminlab.com/slug: portainer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portainer.vollminlab.com
      secretName: wildcard-tls
  rules:
    - host: portainer.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
